--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "antd": "^5.6.1",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "ra-data-fakerest": "^4.12.2",
+    "ra-data-json-server": "^4.12.2",
     "react": "18.2.0",
+    "react-admin": "^4.12.2",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "typescript": "5.1.3",
