--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.6.1",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "query-string": "^8.1.0",
     "ra-data-fakerest": "^4.12.2",
     "ra-data-json-server": "^4.12.2",
     "react": "18.2.0",
