--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.89",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "antd": "^5.6.1",
+    "chart.js": "^4.3.3",
+    "lodash": "^4.17.21",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "query-string": "^8.1.0",
@@ -28,6 +32,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2"
