--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "18.2.5",
     "antd": "^5.6.1",
     "chart.js": "^4.3.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
@@ -29,7 +31,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "typescript": "5.1.3",
-    "zustand": "^4.3.9"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.197",
